# parquet-demo

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
examples/: __init__.py  generate_big_parquet.py  generate_parquet_from_ddl.py  ingest_parquet_to_mongo.py  ingest_parquet_to_mongo_bulk.py  ingest_parquet_to_mongo_stream.py  run_example.py
src/parquet_demo/: __init__.py  io.py
tests/: conftest.py  test_datetime.py  test_infer_schema.py  test_io.py
