[tool.poetry]
name = "parquet-demo"
version = "0.1.0"
description = "Minimal demo for reading and writing Parquet using PyArrow"
authors = ["Alejandro Mancilla <alxmancilla@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pyarrow = "^15.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
